src/styles/index.css
@import "tailwindcss";
@import "./App.css";

html,
body {
  background-color: #0a0a0b;
  scroll-behavior: smooth;
  overflow-x: clip;
}

@theme {
  --font-inter: "Inter", sans-serif;
  --font-jetbrains-mono: "JetBrains Mono", monospace;
  --breakpoint-3xl: 120rem;
  --breakpoint-1xl: 1070px;
  --rounded-sm: 5px;
  --text-xl: 42px;
  --text-lg: 36px;
  --text-title-md: 28px;
  --text-md: 22px;
  --text-sm: 14px;
  --text-xs: 12px;
  --color-primary: #0a0a0b;
  --color-primary-text: #f9f9f9;
  --color-secondary-text: #c0c0c0;
  --color-stroke-gray: #242424;
  --color-inactive-text: #97979c;
  --color-dull-white: #f9f9f9;
  --color-dark-gray: #686870;
  --color-low-opacity-text: #97979C;
  --color-stroke-15: #353536;
}

/* styles.css or a module file */
.white-gradient {
  background: linear-gradient(90deg, #cacaca 0%, #e9e9e9 40.87%, #d3d3d3 100%);
}

